--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
        <h1>Odin Recipes</h1> 
+       <a href="recipes/loaded-potatoes.html">Loaded Baked Potatoes</a>
     </body>
 </html>
