Add mashed potatoes and chicken

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Delicious Recipes</title>
+        <title>Delicious Recipes for the Appalachian Trail</title>
     </head>
 
     <body>
        <h1>Odin Recipes</h1> 
-       <a href="recipes/loaded-potatoes.html">Loaded Baked Potatoes</a>
+       <a href="recipes/loaded-potatoes.html">Mashed Potatoes</a>
     </body>
 </html>
