--- a/recipes/loaded-potatoes.html
+++ b/recipes/loaded-potatoes.html
@@ -2,10 +2,32 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Loaded Baked Potatoes</title>
+        <title>Mashed Potatoes</title>
     </head>
 
     <body>
-        <h1>Loaded Baked Potatoes</h1>
+        <h1>Trail Mashed Potatoes</h1>
+        <img src="./loaded-potatoes.jpg" atl="A camping pot with mashed potatoes">
+        
+        <h2>Loaded Baked Potatoes with Buffalo Chicken</h2>
+        
+        <p>Mashed potatoes are a popular dish on trail, made better by the addition of delicious buffalo chicken.</p>
+        <p>This recipe also includes a bit of olive oil for the calories.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 oz loaded baked potato flakes</li>
+            <li>5 oz Chicken Creations, buffalo style</li>
+            <li>1 tablespoon olive oil</li>
+            <li>The willpower to eat this yet again</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Follow potato package instructions for cooking</li>
+            <li>Immediately after mixing water and potatoes, stir in oil, then chicken</li>
+            <li>Wonder how you will eat so much potato; do so anyway</li>
+        </ol>
+
     </body>
 </html>
