--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
-       <h1>Odin Recipes</h1> 
-       <a href="recipes/loaded-potatoes.html">Mashed Potatoes</a>
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/loaded-potatoes.html">Mashed Potatoes</a></li>
+            <li><a href="recipes/breakfast-latte.html">Breakfast Latte</a></li>
+        </ul>
     </body>
 </html>
