Fix typos, move images

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Delicious Recipes for the Appalachian Trail</title>
+        <title>Favorite Trail Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Delicious Recipes for the Appalachian Trail</h1>
         <ul>
             <li><a href="recipes/loaded-potatoes.html">Mashed Potatoes</a></li>
             <li><a href="recipes/breakfast-latte.html">Breakfast Latte</a></li>
