--- a/recipes/breakfast-latte.html
+++ b/recipes/breakfast-latte.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Breakfast Latte</h1>
-        <img src="./bressentials.jpg" alt="A box of Carnation Breakfast Essentials">
+        <img src="../images/bressentials.jpg" alt="A box of Carnation Breakfast Essentials">
 
         <h2>High Protein Trail Breakfast Latte</h2>
         <p>Quick and easy to make, this is a great drink to make to start the day.</p>
