--- a/recipes/loaded-potatoes.html
+++ b/recipes/loaded-potatoes.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Mashed Potatoes</title>
+        <title>Trail Mashed Potatoes</title>
     </head>
 
     <body>
         <h1>Trail Mashed Potatoes</h1>
-        <img src="./loaded-potatoes.jpg" atl="A camping pot with mashed potatoes">
+        <img src="../images/loaded-potatoes.jpg" alt="A camping pot with mashed potatoes">
         
-        <h2>Loaded Baked Potatoes with Buffalo Chicken</h2>
+        <h2>Loaded Mashed Potatoes with Buffalo Chicken</h2>
         
         <p>Mashed potatoes are a popular dish on trail, made better by the addition of delicious buffalo chicken.</p>
         <p>This recipe also includes a bit of olive oil for the calories.</p>
