Add extremely basic CSS

--- a/recipes/breakfast-latte.html
+++ b/recipes/breakfast-latte.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Breakfast Latte</title>
+        <link rel="stylesheet" href="recipe-styles.css">
     </head>
 
     <body>
