--- a/recipes/loaded-potatoes.html
+++ b/recipes/loaded-potatoes.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Trail Mashed Potatoes</title>
+        <link rel="stylesheet" href="recipe-styles.css">
     </head>
 
     <body>
