--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Favorite Trail Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Delicious Recipes for the Appalachian Trail</h1>
+        <img src="./images/banner.jpg" alt="A photograph of trees and a white AT blaze">
         <ul>
             <li><a href="recipes/loaded-potatoes.html">Mashed Potatoes</a></li>
             <li><a href="recipes/breakfast-latte.html">Breakfast Latte</a></li>
